--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   }
   
   .title {
-    text-align: center;
+    text-align: left;
     font-size: 34px;
   }
   
@@ -56,4 +56,9 @@ body {
     margin-top: 10px;
     width: 500px;
     height: 90px;
+  }
+
+  .non-hyperlink {
+    color: inherit;
+    text-decoration: none;
   }
